--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-scripts": "5.0.1",
     "styled-components": "^6.0.7",
     "styled-reset": "^4.5.1",
+    "supabase": "^1.86.1",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0",
     "zustand": "^4.4.1"
