--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "styled-components": "^6.0.7",
     "styled-reset": "^4.5.1",
     "supabase": "^1.86.1",
+    "sweetalert2": "^11.7.23",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0",
     "zustand": "^4.4.1"
