--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "sweetalert2": "^11.7.23",
     "sweetalert2-react-content": "^5.0.7",
     "typescript": "^4.4.2",
+    "uuid": "^9.0.0",
     "web-vitals": "^2.1.0",
     "zustand": "^4.4.1"
   },
