--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@types/quill": "^2.0.10",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "@xeger/quill-image-actions": "^0.7.1",
+    "@xeger/quill-image-formats": "^0.7.1",
     "antd": "^5.8.3",
     "axios": "^1.4.0",
     "dayjs": "^1.11.9",
