--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^13.2.1",
     "@types/googlemaps": "^3.43.3",
     "@types/jest": "^27.0.1",
+    "@types/lodash.debounce": "^4.0.7",
     "@types/node": "^16.7.13",
     "@types/quill": "^2.0.10",
     "@types/react": "^18.0.0",
@@ -21,6 +22,7 @@
     "antd": "^5.8.3",
     "axios": "^1.4.0",
     "dayjs": "^1.11.9",
+    "lodash.debounce": "^4.0.8",
     "quill": "1.3.6",
     "quill-image-resize-module-react": "^3.0.0",
     "react": "^18.2.0",
