--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "antd": "^5.8.3",
     "axios": "^1.4.0",
     "dayjs": "^1.11.9",
+    "lodash": "^4.17.21",
     "lodash.debounce": "^4.0.8",
     "quill": "1.3.6",
     "quill-image-resize-module-react": "^3.0.0",
