--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "quill-image-resize-module-react": "^3.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet-async": "^1.3.0",
     "react-icons": "^4.10.1",
     "react-quill": "^2.0.0",
     "react-router": "^6.15.0",
