Fix. 프로필 수정: 이미지 확장자 제한, 파일 크기 압축 추가

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "@types/browser-image-compression": "^1.0.9",
     "@types/googlemaps": "^3.43.3",
     "@types/jest": "^27.0.1",
     "@types/lodash.debounce": "^4.0.7",
@@ -21,6 +22,7 @@
     "@xeger/quill-image-formats": "^0.7.1",
     "antd": "^5.8.3",
     "axios": "^1.4.0",
+    "browser-image-compression": "^2.0.2",
     "dayjs": "^1.11.9",
     "lodash": "^4.17.21",
     "lodash.debounce": "^4.0.8",
